--- a/assets/stylesheets/main/desktop.scss
+++ b/assets/stylesheets/main/desktop.scss
@@ -28,7 +28,7 @@
 
         p {
             color: white;
-            text-shadow: 1px 2px 2px black, 1px 1px 3px black;
+            text-shadow: 1px 2px 2px #0005, 1px 1px 3px #0005;
             font-size: 13px;
             font-family: "SFPro-Medium", "PingFangSC-Medium";
             margin-top: 5px;
