--- a/assets/stylesheets/finderbar/finderbar.css
+++ b/assets/stylesheets/finderbar/finderbar.css
@@ -3,51 +3,43 @@
   height: 24px !important;
   /* M2+ MacBook 35px, normal Mac 24px */
   -webkit-backdrop-filter: blur(50px) saturate(0.8);
-  backdrop-filter: blur(50px) saturate(0.8);
+          backdrop-filter: blur(50px) saturate(0.8);
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
   box-sizing: border-box;
   -webkit-user-select: none;
-  -moz-user-select: none;
-  user-select: none;
+     -moz-user-select: none;
+          user-select: none;
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 9999;
 }
-
 .finderbar.macbook {
   height: 35px !important;
 }
-
 .finderbar.black-text .left {
   color: black;
   text-shadow: none;
 }
-
 .finderbar.black-text .right {
   color: black;
   text-shadow: none;
 }
-
 .finderbar.black-text .right img {
   filter: invert(1);
 }
-
 .finderbar .left {
   display: inline-flex;
   align-items: center;
   color: white;
   text-shadow: 1px 2px 10px rgba(0, 0, 0, 0.3333333333);
 }
-
 .finderbar .left .logo {
   font-size: 16.3px;
   margin-left: 10px;
 }
-
 .finderbar .left .appname {
   font-family: "SFPro-Semibold", "PingFang-Semibold";
   font-weight: bold;
@@ -56,7 +48,6 @@
   letter-spacing: normal;
   margin-left: 0;
 }
-
 .finderbar .left p {
   font-size: 13.5px;
   letter-spacing: -0.2px;
@@ -67,11 +58,9 @@
   line-height: 20px;
   font-family: "SFPro-Medium", "PingFangSC-Medium";
 }
-
 .finderbar .left p.active {
   background: rgba(250, 250, 250, 0.337254902);
 }
-
 .finderbar .right {
   display: inline-flex;
   flex-direction: row-reverse;
@@ -80,7 +69,6 @@
   align-items: center;
   /* justify-content: center; */
 }
-
 .finderbar .right img {
   transform: scale(0.5);
   /* transform: scale(0.1); */
@@ -89,7 +77,6 @@
   width: auto;
   height: 18px;
 }
-
 .finderbar .right .date {
   margin-left: 7px;
   margin-right: 7px;
@@ -98,13 +85,10 @@
   font-family: "SFPro-Medium", "PingFangSC-Medium";
   line-height: 16px;
 }
-
 .finderbar .right .time {
   margin-right: 17px;
   font-size: 13.5px;
   letter-spacing: -0.2px;
   line-height: 16px;
   font-family: "SFPro-Medium", "PingFangSC-Medium";
-}
-
-/*# sourceMappingURL=finderbar.css.map */
+}/*# sourceMappingURL=finderbar.css.map */
